Update base image and tweak code to deal with updated dependencies